samples/_failures_safe/1761319016_897a34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f284f139.c: In function ‘read_operator’:
./samples/SAFE/__tmp_f284f139.c:160:14: error: expected ‘)’ at end of input
  160 |     if (state
      |        ~     ^
      |              )
./samples/SAFE/__tmp_f284f139.c:160:5: error: expected declaration or statement at end of input
  160 |     if (state
      |     ^~
